--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 	    <meta name="format-detection" content="telephone=no">
-		<title>后台管理系统</title>
+		<title>华岳供应链金融管理平台</title>
 		<link rel="stylesheet" href="layui/css/layui.css" media="all" />
 		<link rel="stylesheet" href="css/global.css" media="all" />
 		<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css" media="all" />
@@ -23,7 +23,7 @@
                 <div class="layui-main">
 					<div class="admin-login-box">
 						<a class="logo" style="left: 0;" href="/">
-							<span style="font-size: 22px;">后台管理系统</span>
+							<span style="font-size: 22px;">华岳供应链金融管理平台</span>
 						</a>
 						<div class="admin-side-toggle">
 							<i class="fa fa-bars" aria-hidden="true"></i>
