--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div class="login">
-		<div class="message">后台管理系统</div>
+		<div class="message">华岳供应链金融管理平台</div>
 		<div id="darkbannerwrap"></div>
 
 		<form id="login-form" method="post" onsubmit="return false;">
