--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 		
 	</head>
 
-	<body>
+	<body background="/img/login/bg.png">
 		<div class="layui-layout layui-layout-admin" style="border-bottom: solid 5px #1aa094;">
 		    <!-- 标题栏 -->
 			<div class="layui-header header header-demo">
@@ -76,11 +76,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="layui-footer footer footer-demo" id="admin-footer">
-				<div>
-					<p>华岳供应链金融平台</p>
-				</div>
-			</div>
+<!-- 			<div class="layui-footer footer footer-demo" id="admin-footer"> -->
+<!-- 				<div> -->
+<!-- 					<p>华岳供应链金融平台</p> -->
+<!-- 				</div> -->
+<!-- 			</div> -->
 			<div class="site-tree-mobile layui-hide">
 				<i class="layui-icon">&#xe602;</i>
 			</div>
