--- a/src/main/resources/static/pages/map.html
+++ b/src/main/resources/static/pages/map.html
@@ -14,9 +14,12 @@
 
   <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
-      <div class="layui-col-sm12">
-            
+      <div class="layui-col-sm3">
+      </div>
+       <div class="layui-col-sm6">
           <div align="center" id="main" style="width: 600px;height:500px;"></div> 
+      </div>
+      <div class="layui-col-sm3">
       </div>
     </div>
   </div>
