--- a/src/main/resources/static/pages/company/myCompanyList.html
+++ b/src/main/resources/static/pages/company/myCompanyList.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="../../layui/css/layui.css" media="all" >
 <title>Insert title here</title>
 <link rel="stylesheet" type="text/css" media="screen" href="../../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" media="screen" href="../../css/dataTables.bootstrap.min.css">
