--- a/src/main/resources/static/pages/financingApply/addFinancingApply.html
+++ b/src/main/resources/static/pages/financingApply/addFinancingApply.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" media="screen" href="../../css/bootstrap.min.css">
+<link rel="stylesheet" href="../../layui/css/layui.css" media="all" >
 </head>
 <body>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -41,31 +42,51 @@
 			<div class='form-group'>
 				<label class='col-md-2 control-label'>过去一年业务合同</label>
 				<div class='col-md-10'>
-					<input class='form-control' placeholder='serviceCompanyImg' type='text' name='serviceCompanyImg' id='serviceCompanyImg' value='' data-bv-notempty='true' data-bv-notempty-message='过去一年业务合同 不能为空'>
+					<input  type="hidden" class='form-control' placeholder='serviceCompanyImg' type='text' name='serviceCompanyImg' id='serviceCompanyImg' value='' data-bv-notempty='true' data-bv-notempty-message='过去一年业务合同 不能为空'>
+					<img style="width: 50px;" id="serviceCompanyImgPlay" alt="商品列表图片" src="">
+                    <button type="button" class="layui-btn" id="serviceCompanyImgFile">
+                      <i class="layui-icon">&#xe67c;</i>上传图片
+                    </button>
 				</div>
 			</div>
 			<div class='form-group'>
 				<label class='col-md-2 control-label'>发票</label>
 				<div class='col-md-10'>
-					<input class='form-control' placeholder='invoiceImg' type='text' name='invoiceImg' id='invoiceImg' value='' data-bv-notempty='true' data-bv-notempty-message='发票 不能为空'>
+					<input  type="hidden" class='form-control' placeholder='invoiceImg' type='text' name='invoiceImg' id='invoiceImg' value='' data-bv-notempty='true' data-bv-notempty-message='发票 不能为空'>
+					<img style="width: 50px;" id="invoiceImgImgPlay" alt="商品列表图片" src="">
+                    <button type="button" class="layui-btn" id="invoiceImgFile">
+                      <i class="layui-icon">&#xe67c;</i>上传图片
+                    </button>
 				</div>
 			</div>
 			<div class='form-group'>
 				<label class='col-md-2 control-label'>银行流水</label>
 				<div class='col-md-10'>
-					<input class='form-control' placeholder='accountStatementImg' type='text' name='accountStatementImg' id='accountStatementImg' value='' data-bv-notempty='true' data-bv-notempty-message='银行流水 不能为空'>
+					<input  type="hidden" class='form-control' placeholder='accountStatementImg' type='text' name='accountStatementImg' id='accountStatementImg' value='' data-bv-notempty='true' data-bv-notempty-message='银行流水 不能为空'>
+					<img style="width: 50px;" id="accountStatementImgPlay" alt="商品列表图片" src="">
+                    <button type="button" class="layui-btn" id="accountStatementImgFile">
+                      <i class="layui-icon">&#xe67c;</i>上传图片
+                    </button>
 				</div>
 			</div>
 			<div class='form-group'>
 				<label class='col-md-2 control-label'>最近三年审计报告</label>
 				<div class='col-md-10'>
-					<input class='form-control' placeholder='auditReportImg' type='text' name='auditReportImg' id='auditReportImg' value='' data-bv-notempty='true' data-bv-notempty-message='最近三年审计报告 不能为空'>
+					<input  type="hidden" class='form-control' placeholder='auditReportImg' type='text' name='auditReportImg' id='auditReportImg' value='' data-bv-notempty='true' data-bv-notempty-message='最近三年审计报告 不能为空'>
+					<img style="width: 50px;" id="auditReportImgPlay" alt="商品列表图片" src="">
+                    <button type="button" class="layui-btn" id="auditReportImgFile">
+                      <i class="layui-icon">&#xe67c;</i>上传图片
+                    </button>
 				</div>
 			</div>
 			<div class='form-group'>
 				<label class='col-md-2 control-label'>其他资料</label>
 				<div class='col-md-10'>
-					<input class='form-control' placeholder='otherImg' type='text' name='otherImg' id='otherImg' value='' data-bv-notempty='true' data-bv-notempty-message='其他资料 不能为空'>
+					<input  type="hidden" class='form-control' placeholder='otherImg' type='text' name='otherImg' id='otherImg' value='' data-bv-notempty='true' data-bv-notempty-message='其他资料 不能为空'>
+					<img style="width: 50px;" id="otherImgPlay" alt="商品列表图片" src="">
+                    <button type="button" class="layui-btn" id="otherImgFile">
+                      <i class="layui-icon">&#xe67c;</i>上传图片
+                    </button>
 				</div>
 			</div>
 
@@ -90,6 +111,146 @@
 	<script type="text/javascript" src="../../js/common.js"></script>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
 	<script type="text/javascript">
+		
+		
+		
+	 layui.use('upload', function(){
+	        var upload = layui.upload;
+	
+	        
+		 var uploadInst = upload.render({
+		       elem: '#serviceCompanyImgFile' //绑定元素
+		       ,url: '/upOssFile/' //上传接口
+		       ,data: {
+		           path:'financingApply'
+		       },
+		       accept: 'image',
+		       acceptMime:'image/*',
+		       before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
+		           layer.load(); //上传loading
+		       }
+		       ,done: function(res){
+		         //假设code=0代表上传成功
+		           if(res.code == 0){
+		             //do something （比如将res返回的图片链接保存到表单的隐藏域）
+		             $("#serviceCompanyImg").val("http://img.huayuechina.cn/"+res.url);
+		             $('#serviceCompanyImgPlay').attr("src","http://img.huayuechina.cn/"+res.url);
+		           }
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		       ,error: function(){
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		     });
+		
+		 
+		 
+		 var uploadInst = upload.render({
+		       elem: '#invoiceImgFile' //绑定元素
+		       ,url: '/upOssFile/' //上传接口
+		       ,data: {
+		           path:'financingApply'
+		       },
+		       accept: 'image',
+		       acceptMime:'image/*',
+		       before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
+		           layer.load(); //上传loading
+		       }
+		       ,done: function(res){
+		         //假设code=0代表上传成功
+		           if(res.code == 0){
+		             //do something （比如将res返回的图片链接保存到表单的隐藏域）
+		             $("#invoiceImg").val("http://img.huayuechina.cn/"+res.url);
+		             $('#invoiceImgPlay').attr("src","http://img.huayuechina.cn/"+res.url);
+		           }
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		       ,error: function(){
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		     });
+		
+		 
+		 
+		 var uploadInst = upload.render({
+		       elem: '#accountStatementImgFile' //绑定元素
+		       ,url: '/upOssFile/' //上传接口
+		       ,data: {
+		           path:'financingApply'
+		       },
+		       accept: 'image',
+		       acceptMime:'image/*',
+		       before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
+		           layer.load(); //上传loading
+		       }
+		       ,done: function(res){
+		         //假设code=0代表上传成功
+		           if(res.code == 0){
+		             //do something （比如将res返回的图片链接保存到表单的隐藏域）
+		             $("#accountStatementImg").val("http://img.huayuechina.cn/"+res.url);
+		             $('#accountStatementImgPlay').attr("src","http://img.huayuechina.cn/"+res.url);
+		           }
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		       ,error: function(){
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		     });
+		 
+		 
+		 var uploadInst = upload.render({
+		       elem: '#auditReportImgFile' //绑定元素
+		       ,url: '/upOssFile/' //上传接口
+		       ,data: {
+		           path:'financingApply'
+		       },
+		       accept: 'image',
+		       acceptMime:'image/*',
+		       before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
+		           layer.load(); //上传loading
+		       }
+		       ,done: function(res){
+		         //假设code=0代表上传成功
+		           if(res.code == 0){
+		             //do something （比如将res返回的图片链接保存到表单的隐藏域）
+		             $("#auditReportImg").val("http://img.huayuechina.cn/"+res.url);
+		             $('#auditReportImgPlay').attr("src","http://img.huayuechina.cn/"+res.url);
+		           }
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		       ,error: function(){
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		     });
+		 
+		 
+		 var uploadInst = upload.render({
+		       elem: '#otherImgFile' //绑定元素
+		       ,url: '/upOssFile/' //上传接口
+		       ,data: {
+		           path:'financingApply'
+		       },
+		       accept: 'image',
+		       acceptMime:'image/*',
+		       before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
+		           layer.load(); //上传loading
+		       }
+		       ,done: function(res){
+		         //假设code=0代表上传成功
+		           if(res.code == 0){
+		             //do something （比如将res返回的图片链接保存到表单的隐藏域）
+		             $("#otherImg").val("http://img.huayuechina.cn/"+res.url);
+		             $('#otherImgPlay').attr("src","http://img.huayuechina.cn/"+res.url);
+		           }
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		       ,error: function(){
+		           layer.closeAll('loading'); //关闭loading
+		       }
+		     });
+	 });
+		 
+	
 		layui.use(['layer','laydate'], function(){
 		    var layer = layui.layer;
 		});
